--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
         <div class="selection">
             <label for="citySelect">شارەکە هەڵبژێرە:</label>
             <select id="citySelect">
-                <option value="Erbil">هەولێر</option>
-                <option value="Sulaymaniyah">سلێمانی</option>
-                <option value="Duhok">دهۆک</option>
-                <option value="Halabja">هەڵەبجە</option>
-                <option value="Kirkuk">کەرکوک</option>
-            </select>
+    <option value="Erbil">هەولێر</option>
+    <option value="Sulaymaniyah">سلێمانی</option>
+    <option value="Duhok">دهۆک</option>
+    <option value="Halabja">هەڵەبجە</option>
+    <option value="Kirkuk">کەرکوک</option>
+    <option value="Penjwin">پێنجوێن</option>
+    <option value="Ranya">ڕانیە</option>
+    <option value="Soran">سۆران</option>
+    <option value="Zakho">زاخۆ</option>
+    <option value="Akre">ئاکرێ</option>
+</select>
+
         </div>
 
         <div class="prayer-cards" id="prayerTimes">
