--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
         :root { --main-bg: #0f172a; --card-bg: #1e293b; --accent: #38bdf8; }
         body { background: var(--main-bg); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; display: flex; justify-content: center; padding-bottom: 50px; }
         .app-container { width: 95%; max-width: 420px; background: var(--card-bg); margin-top: 20px; border-radius: 30px; padding: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.4); text-align: center; }
-        .clock { font-size: 3.5rem; font-weight: bold; color: var(--accent); margin: 10px 0; }
-        .countdown { background: #ea580c; color: white; padding: 8px 20px; border-radius: 50px; font-weight: bold; font-size: 1rem; display: inline-block; margin-bottom: 15px; min-width: 200px; }
-        .dates { font-size: 0.85rem; opacity: 0.8; line-height: 1.7; margin-bottom: 20px; border-bottom: 1px solid #334155; padding-bottom: 15px; }
-        select { width: 100%; padding: 12px; border-radius: 12px; border: none; background: #334155; color: white; margin-bottom: 15px; font-size: 1rem; cursor: pointer; }
-        .prayer-row { display: flex; justify-content: space-between; align-items: center; padding: 15px; background: rgba(255,255,255,0.03); margin-bottom: 8px; border-radius: 15px; }
-        .prayer-row.next-active { border: 2px solid var(--accent); background: rgba(56, 189, 248, 0.1); }
-        .vol-icon { cursor: pointer; color: #64748b; font-size: 1.2rem; transition: 0.3s; }
+        .clock { font-size: 3.2rem; font-weight: bold; color: var(--accent); margin: 10px 0; font-family: monospace; }
+        .countdown { background: #ea580c; color: white; padding: 8px 20px; border-radius: 50px; font-weight: bold; font-size: 1rem; display: inline-block; margin-bottom: 15px; min-width: 220px; }
+        .dates { font-size: 0.9rem; opacity: 0.9; line-height: 1.8; margin-bottom: 20px; border-bottom: 1px solid #334155; padding-bottom: 15px; }
+        select { width: 100%; padding: 12px; border-radius: 12px; border: none; background: #334155; color: white; margin-bottom: 10px; font-size: 1rem; cursor: pointer; }
+        .prayer-row { display: flex; justify-content: space-between; align-items: center; padding: 14px 18px; background: rgba(255,255,255,0.03); margin-bottom: 8px; border-radius: 15px; }
+        .vol-icon { cursor: pointer; color: #64748b; font-size: 1.3rem; transition: 0.3s; }
         .vol-icon.on { color: var(--accent); }
-        .reciter-section { margin-top: 25px; text-align: right; border-top: 1px solid #334155; padding-top: 15px; }
-        .reciter-label { font-size: 0.9rem; margin-bottom: 10px; display: block; color: var(--accent); }
+        .time { font-family: monospace; font-size: 1.4rem; font-weight: bold; color: #f8fafc; }
+        .reciter-section { margin-top: 20px; text-align: right; border-top: 1px solid #334155; padding-top: 15px; }
+        .test-btn { background: var(--accent); color: #0f172a; border: none; padding: 8px 15px; border-radius: 8px; font-weight: bold; cursor: pointer; width: 100%; margin-top: 5px; transition: 0.3s; }
+        .test-btn:active { transform: scale(0.95); }
     </style>
 </head>
 <body>
@@ -45,13 +46,14 @@
         <div id="prayerList"></div>
 
         <div class="reciter-section">
-            <span class="reciter-label"><i class="fas fa-microphone"></i> هەڵبژاردنی بانگبێژ:</span>
+            <label style="font-size: 0.85rem; color: var(--accent);">هەڵبژاردنی بانگبێژ:</label>
             <select id="reciterSelect">
                 <option value="https://www.islamcan.com/audio/adhan/azan1.mp3">مەککە (شێخ عەلی مەلا)</option>
                 <option value="https://www.islamcan.com/audio/adhan/azan2.mp3">مەدینە (شێخ عەبدولمەجید)</option>
                 <option value="https://www.islamcan.com/audio/adhan/azan3.mp3">میسر (شێخ عەبدولباست)</option>
                 <option value="https://www.islamcan.com/audio/adhan/azan15.mp3">بانگێکی ئارام</option>
             </select>
+            <button class="test-btn" onclick="testAdhan()">تاقیکردنەوەی دەنگ <i class="fas fa-play"></i></button>
         </div>
     </div>
     <audio id="adhanPlayer"></audio>
