--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         .test-btn { background: var(--accent); color: #0f172a; border: none; padding: 8px 15px; border-radius: 8px; font-weight: bold; cursor: pointer; width: 100%; margin-top: 5px; transition: 0.3s; }
         .test-btn:active { transform: scale(0.95); }
     </style>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="theme-color" content="#0f172a">
 </head>
 <body>
     <div class="app-container">
